# convertidor_a_PDF

./: .env.example  .gitignore  HELP.md  PROMP-S4.md  QUICKSTART.md  README.md  S4.md  S5.md  S6.md  S7.md  api-test.ps1  api-test.sh  check_db.py  check_pyhanko.py  check_user_detail.py  debug_db.py  debug_output.txt  fix_db_schema.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_mail_system.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  annotations.py  auth.py  files.py  signature.py
app/core/: __init__.py  config.py  converters.py  mail_config.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  document.py  user.py
app/schemas/: __init__.py  annotation.py  document.py  password_reset.py  token.py  user.py
app/services/: mail_service.py  pdf_annotation.py
frontend/: .gitignore  INTEGRATION.md  QUICKSTART.md  auth-utils.js  config.js  forgot-password-script.js  forgot-password.html  index.html  login-script.js  login-styles.css  login.html  logout.html  logout.js  register-script.js  register.html  reset-password-script.js  reset-password.html  script.js  styles.css  user-dropdown.js
tests/: __init__.py  test_auth.py
uploads/: 0bec284a-9d2c-43f4-8b72-7376dd54c289.docx  3c4b8387-912f-4fb6-ab64-84d466f238db.docx  4f37f973-dc57-4b4e-b821-861934d83812.docx  6b7fd35d-5137-4810-990f-717eff679283.docx  91322146-1d52-4f48-b388-f208fdb411f3.docx  98cc3d7d-fd62-43b6-ab25-3399c7315134.docx  a3f7544c-d4a7-4441-b9db-e60a07412d24.docx  a7ef0905-efd7-473e-bd15-d3e48ec9afd0.docx  bb1c3bf5-5c85-4b12-bc55-8b8d49f445e9.docx  c81fe6a5-f00d-40d1-94bf-f64d4e40058d.docx  d69af494-612e-4ce6-a2f2-b0c3ce90bf8c.docx  e10afe16-7342-4eee-9490-fd843cf9b622.docx  f976ef8c-4ebd-40ac-9c54-12c9a4af785c.docx
